--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <!--[if IE]><link rel="shortcut icon" href="img/favicon.ico"><![endif]-->
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="img/favicon.ico">
 
-    <!--[if (gt IE 8) | (IEMobile)]><!-->
     <link rel="stylesheet" href="css/style.css">
-    <!--<![endif]-->
-
-    <!--[if (lt IE 9) & (!IEMobile)]>
-    <link rel="stylesheet" href="css/ie.css">
-    <![endif]-->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
