Fixed end of tag in navigation.

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 <main>
     <nav>
         <ul>
-            <li><a href="#about">About</a></p>
+            <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
