--- a/src/index.html
+++ b/src/index.html
@@ -6,25 +6,9 @@
     <meta name="keywords" content="HTML,HTML5,CSS,CSS3,Sass,JavaScript,jQuery,Dart,Php,Website">
     <meta name="author" content="Honza Bittner"/>
     <title>Honza Bittner</title>
-
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
     <link rel="shortcut icon" href="img/favicon.ico">
-
     <link rel="stylesheet" href="css/style.css">
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-
-    <!-- Google Analytics -->
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-47060729-4', 'auto');
-        ga('send', 'pageview');
-    </script>
 </head>
 <body>
 
@@ -78,7 +62,7 @@
 
     <section id="contact" class="text">
         <h2>Get in touch with me!</h2>
-        <p>Do you wanna make a <b>website</b>, help with the <b>code</b> or just <b>chat</b> about interesting things? You should definitely contact me on my <b>email</b> <a href="mailto:the%40honzabittner.cz?Subject=Hi%20man!">the&commat;honzabittner.cz</a> or some social networks below.</p>
+        <p>Do you want to make a <b>website</b>, help with the <b>code</b> or just <b>chat</b> about interesting things? You should definitely contact me on my <b>email</b> <a href="mailto:the%40honzabittner.cz?Subject=Hi%20man!">the&commat;honzabittner.cz</a> or some social networks below.</p>
         <ul class="social-list">
             <li><a href="http://facebook.com/majstr.hobi" target="_blank" class="fcbk">Facebook</a></li>
             <li><a href="http://google.com/+HonzaBittner" target="_blank" class="gpls">Google+</a></li>
@@ -92,6 +76,18 @@
     </footer>
 </main>
 
-<script type="application/javascript" src="js/script.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <script type="application/javascript" src="js/script.js"></script>
+    
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-47060729-4', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 </html>
