--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
+    <meta name="keywords" content="HTML,HTML5,CSS,CSS3,Sass,JavaScript,jQuery,Dart,Php,Website,Portfolio">
     <meta name="description" content="Honza Bittner's personal portfolio which tells his story."/>
-    <meta name="keywords" content="HTML,HTML5,CSS,CSS3,Sass,JavaScript,jQuery,Dart,Php,Website">
     <meta name="author" content="Honza Bittner"/>
     <title>Honza Bittner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -35,7 +35,7 @@
     <section id="about" class="text">
         <h2>Know me...</h2>
         <p>I am <strong>18 years</strong> old independent coder and programmer. I live in <strong>Ceska Lipa</strong> which is a city situated in the north of the Czech Republic. I am interested in web technologies, which I also study. In my free time I study languages
-            like HTML5, CSS3 with the <b>Sass</b> preprocessor, JavaScript with the jQuery library, <strong>Dart</strong> and <strong>PHP</strong>.</p>
+            like HTML5, CSS3 with the <b>Sass</b> preprocessor - and OOCSS with BEM syntax, JavaScript with the jQuery library, <strong>Dart</strong> and <strong>PHP</strong>.</p>
 
         <ul class="image-links">
             <li>
