Fix website while moving the page to a Wedos hosting

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <footer class="footer">
-        <p><strong>Honza Bittner</strong>, 2014<br/>This website is available under MIT license on <a href="https://github.com/HonzaBittner/portfolio" target="_blank">GitHub</a>.</p>
+        <p><strong>Honza Bittner</strong>, 2016<br/>This website is available under MIT license on <a href="https://github.com/HoBi/hobi.github.io" target="_blank">GitHub</a>.</p>
     </footer>
 </main>
 
