Remove page and add comming-soon

--- a/src/index.html
+++ b/src/index.html
@@ -1,93 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="keywords" content="HTML,HTML5,CSS,CSS3,Sass,JavaScript,jQuery,Dart,Php,Website,Portfolio">
-    <meta name="description" content="Honza Bittner's personal portfolio which tells his story."/>
-    <meta name="author" content="Honza Bittner"/>
-    <title>Honza Bittner</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="css/style.css">
+
+    <title>Honza Bittner</title>
+
+    <!-- CSS -->
+    <link href="build/style.css" rel="stylesheet" />
+    <link href='https://fonts.googleapis.com/css?family=Bungee' rel='stylesheet' type='text/css'>
+
+    <!-- Meta tags -->
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Honza Bittner">
+    <meta name="description" content="Web designer / Front-end developer from the Czech republic" />
+    <meta name="keywords" content="HTML,HTML5,CSS,CSS3,Sass,JavaScript,jQuery,PHP,Website,Portfolio">
+
+    <!-- Social networks -->
+    <meta itemprop="name" content="Honza Bittner's website">
+    <meta itemprop="description" content="Web designer / Front-end developer from the Czech republic">
+    <meta property="og:url" content="https://www.facebook.com/tenhobi">
+    <meta property="og:title" content="Honza Bittner's website">
+    <meta property="og:description" content="Web designer / Front-end developer from the Czech republic">
+    <meta property="og:site_name" content="Honza Bittner's website">
+    <meta property="og:image" content="">
+    <meta property="fb:admins" content="">
+    <meta property="fb:app_id" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:audio" content="">
+    <meta property="og:video" content="">
+
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 
-<main>
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+<div class="holder">
+    <h1>Comming soon!</h1>
+    <a href="https://twitter.com/@tenhobi" target="_blank">@tenhobi</a>
+</div>
 
-    <header class="header">
-        <div class="social">
-            <a href="http://twitter.com/@HonzaBittner" target="_blank">@</a>
-            <a href="http://google.com/+HonzaBittner" target="_blank">+</a>
-        </div>
-        <h1>Honza Bittner</h1>
-    </header>
+<!-- JS -->
+<!--<script type="application/javascript" src="js/script.js"></script>-->
 
-    <div class="motto">
-        <p><i>The strongest weapon is just a simple thought.</i></p>
-    </div>
-
-    <section id="about" class="text">
-        <h2>Know me...</h2>
-        <p>I am <strong>18 years</strong> old independent coder and programmer. I live in <strong>Ceska Lipa</strong> which is a city situated in the north of the Czech Republic. I am interested in web technologies, which I also study. In my free time I study languages
-            like HTML5, CSS3 with the <b>Sass</b> preprocessor - and OOCSS with BEM syntax, JavaScript with the jQuery library, <strong>Dart</strong> and <strong>PHP</strong>.</p>
-
-        <ul class="image-links">
-            <li>
-                <a href="http://sass-lang.com/" target="_blank"><img src="img/sass.png" alt="Sass"></a>
-            </li>
-            <li>
-                <a href="https://www.dartlang.org/" target="_blank"><img src="img/dart.png" alt="Dart"></a>
-            </li>
-        </ul>
-
-        <p>I am a member of <a href="http://nuvel.eu" target="_blank">Nouvelle Communauté</a> which is a <strong>student community</strong> mainly focused on IT. Nouvelle Communauté is <strong>a brand</strong> that represents our collective strength, skill and inventiveness.</p>
-
-        <ul class="image-links">
-            <li>
-                <a href="http://nuvel.eu" target="_blank"><img src="img/nuvel.png" alt="Nouvelle Communauté"></a>
-            </li>
-        </ul>
-
-        <p>I attend an IT class in a <a href="http://sps-cl.cz" target="_blank">technical school</a>, where we learn Pascal, C#, <strong>Java</strong> and a bit of Assembler. For my projects I use versioning control system <strong>Git</strong> for which I use the <a href="https://github.com/HonzaBittner" target="_blank">GitHub</a> repositores.</p>
-
-        <p>I also write some <strong>articles</strong> about IT stuff, mostly about coding, on a programming social network called
-            <a href="http://www.itnetwork.cz/portfolio/2068" target="_blank">ITnetwork.cz</a>. I am also an editor and a moderator of this website.</p>
-    </section>
-
-    <section id="contact" class="text">
-        <h2>Get in touch with me!</h2>
-        <p>Do you want to make a <b>website</b>, help with the <b>code</b> or just <b>chat</b> about interesting things? You should definitely contact me on my <b>email</b> <a href="mailto:the%40honzabittner.cz?Subject=Hi%20man!">the&commat;honzabittner.cz</a> or some social networks below.</p>
-        <ul class="social-list">
-            <li><a href="http://facebook.com/majstr.hobi" target="_blank" class="fcbk">Facebook</a></li>
-            <li><a href="http://google.com/+HonzaBittner" target="_blank" class="gpls">Google+</a></li>
-            <li><a href="http://twitter.com/@HonzaBittner" target="_blank" class="twtr">Twitter</a></li>
-            <li><a href="http://cz.linkedin.com/pub/honza-bittner/84/469/627/" target="_blank" class="lnkd">Linked IN</a></li>
-        </ul>
-    </section>
-
-    <footer class="footer">
-        <p><strong>Honza Bittner</strong>, 2016<br/>This website is available under MIT license on <a href="https://github.com/HoBi/hobi.github.io" target="_blank">GitHub</a>.</p>
-    </footer>
-</main>
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-    <script type="application/javascript" src="js/script.js"></script>
-    
-    <!-- Google Analytics -->
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<!-- Google Analytics -->
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-47060729-4', 'auto');
-        ga('send', 'pageview');
-    </script>
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-68127923-1', 'auto');
+    ga('send', 'pageview');
+</script>
 </body>
 </html>
