--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 <body>
 
 <div class="holder">
-    <h1>Comming soon!</h1>
+    <h1>Coming soon!</h1>
     <a href="https://twitter.com/@tenhobi" target="_blank">@tenhobi</a>
 </div>
 
