--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Honza Bittner</title>
 
     <!-- CSS -->
-    <link href="build/style.css" rel="stylesheet" />
+    <link href="assets/style.css" rel="stylesheet" />
     <link href='https://fonts.googleapis.com/css?family=Bungee' rel='stylesheet' type='text/css'>
 
     <!-- Meta tags -->
@@ -37,7 +37,7 @@
 <body>
 
 <div class="holder">
-    <h1>Coming soon!</h1>
+    <h1>stay tuned, coming soon</h1>
     <a href="https://twitter.com/@tenhobi" target="_blank">@tenhobi</a>
 </div>
 
