Move css to scss

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Honza Bittner</title>
 
     <!-- CSS -->
-    <link href="assets/style.css" rel="stylesheet" />
+    <link href="build/style.css" rel="stylesheet" />
     <link href='https://fonts.googleapis.com/css?family=Bungee' rel='stylesheet' type='text/css'>
 
     <!-- Meta tags -->
