Add new portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -3,46 +3,71 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <title>Honza Bittner</title>
 
     <!-- CSS -->
-    <link href="build/style.css" rel="stylesheet" />
-    <link href='https://fonts.googleapis.com/css?family=Bungee' rel='stylesheet' type='text/css'>
+    <link href="assets/style.css" rel="stylesheet" />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <script src="https://use.fontawesome.com/de7a41df20.js"></script>
 
     <!-- Meta tags -->
     <meta name="robots" content="index, follow">
     <meta name="author" content="Honza Bittner">
-    <meta name="description" content="Web designer / Front-end developer from the Czech republic" />
+    <meta name="description" content="Proactive programmer who makes a code poetry from Czechia." />
     <meta name="keywords" content="HTML,HTML5,CSS,CSS3,Sass,JavaScript,jQuery,PHP,Website,Portfolio">
 
     <!-- Social networks -->
     <meta itemprop="name" content="Honza Bittner's website">
-    <meta itemprop="description" content="Web designer / Front-end developer from the Czech republic">
+    <meta itemprop="description" content="Proactive programmer who makes a code poetry from Czechia.">
     <meta property="og:url" content="https://www.facebook.com/tenhobi">
     <meta property="og:title" content="Honza Bittner's website">
-    <meta property="og:description" content="Web designer / Front-end developer from the Czech republic">
+    <meta property="og:description" content="Proactive programmer who makes a code poetry from Czechia.">
     <meta property="og:site_name" content="Honza Bittner's website">
-    <meta property="og:image" content="">
-    <meta property="fb:admins" content="">
-    <meta property="fb:app_id" content="">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
-    <meta property="og:audio" content="">
-    <meta property="og:video" content="">
 
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 
-<div class="holder">
-    <h1>stay tuned, coming soon</h1>
-    <a href="https://twitter.com/@tenhobi" target="_blank">@tenhobi</a>
-</div>
+<div class="wrapper">
+    <div class="portfolio">
+        <div class="caption">Made with <i class="fa fa-heart" aria-hidden="true"></i> in Czechia</div>
 
-<!-- JS -->
-<!--<script type="application/javascript" src="js/script.js"></script>-->
+        <div class="item item--introduction">
+            <p>Hi, I'm Honza</p>
+        </div>
+        <div class="item item--about">
+            <!--<i class="fa fa-lightbulb-o" aria-hidden="true"></i>-->
+            <i class="fa fa-child margin--bottom" aria-hidden="true"></i>
+            <p class="margin--bottom">I am a proud student of FIT CTU in Prague where I attend second year of bachelor study. Currently I am a chairman of faculty student club.</p>
+            <p class="margin--bottom">In my free time, I do geocaching, reading books and I also love cooking of any type.</p>
+            <p>I like exploring open-source repositories on GitHub or also making own./p>
+        </div>
+        <div class="item item--tech">
+            <i class="fa fa-star margin--bottom" aria-hidden="true"></i>
+            <p>At the moment,<br />I&nbsp;am passionate about Dart language,<br />language full of ambition.</p>
+        </div>
+        <div class="item item--name">
+            <p>HoBi</p>
+        </div>
+        <div class="item item--social">
+            <i class="icon fa fa-retweet margin--bottom" aria-hidden="true"></i>
+            <p class="margin--bottom">Think. Explore. Know.</p>
+            <p>
+                <a class="link" href="https://fb.com/tenhobi" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i> Facebook</a>
+                <a class="link" href="https://twitter.com/tenhobi" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
+                <a class="link" href="https://github.com/HoBi" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a>
+                <a class="link" href="https://linkedin.com/in/tenhobi" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</a>
+            </p>
+        </div>
+        <div class="item item--image"></div>
+    </div>
+</div>
 
 <!-- Google Analytics -->
 <script>
