Add background animations, improve image

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link href="assets/style.css" rel="stylesheet" />
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=latin-ext" rel="stylesheet">
     <script src="https://use.fontawesome.com/de7a41df20.js"></script>
 
     <!-- Meta tags -->
@@ -46,7 +46,7 @@
             <i class="fa fa-child margin--bottom" aria-hidden="true"></i>
             <p class="margin--bottom">I am a proud student of FIT CTU in Prague where I attend second year of bachelor study. Currently I am a chairman of faculty student club.</p>
             <p class="margin--bottom">In my free time, I do geocaching, reading books and I also love cooking of any type.</p>
-            <p>I like exploring open-source repositories on GitHub or also making own./p>
+            <p>I like exploring open-source repositories on GitHub or also making own.</p>
         </div>
         <div class="item item--tech">
             <i class="fa fa-star margin--bottom" aria-hidden="true"></i>
