Add talk record and article entity

--- a/web/index.html
+++ b/web/index.html
@@ -20,15 +20,15 @@
     <!-- Meta tags -->
     <meta name="robots" content="index, follow">
     <meta name="author" content="Honza Bittner">
-    <meta name="description" content="Proactive programmer who makes a code poetry from Czechia." />
+    <meta name="description" content="Proactive programmer from Czechia who makes a code poetry." />
     <meta name="keywords" content="Dart,HTML,CSS,Website,Portfolio">
 
     <!-- Social networks -->
     <meta itemprop="name" content="Honza Bittner's website">
-    <meta itemprop="description" content="Proactive programmer who makes a code poetry from Czechia.">
+    <meta itemprop="description" content="Proactive programmer from Czechia who makes a code poetry.">
     <meta property="og:url" content="https://www.facebook.com/tenhobi">
     <meta property="og:title" content="Honza Bittner's website">
-    <meta property="og:description" content="Proactive programmer who makes a code poetry from Czechia.">
+    <meta property="og:description" content="Proactive programmer from Czechia who makes a code poetry.">
     <meta property="og:site_name" content="Honza Bittner's website">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
@@ -54,6 +54,11 @@
         <div class="section">
             <h2 class="heading">Talks</h2>
             <div id="talks"></div>
+        </div>
+
+        <div class="section">
+            <h2 class="heading">Articles</h2>
+            <div id="articles"></div>
         </div>
 
         <div class="section">
