--- a/web/index.html
+++ b/web/index.html
@@ -48,7 +48,7 @@
             <p class="paragraph">I am a proud student of FIT CTU in Prague where I attend second year of bachelor study. Currently I am a chairman of faculty student club.</p>
             <p class="paragraph">In my free time, I do geocaching, reading books and I also love cooking of any type.</p>
             <p class="paragraph">I like exploring open-source repositories on GitHub or also making my own.</p>
-            <p class="paragraph"><a class="link" href="https://github.com/tenhobi/ama" target="_blank">Ask me about anything!</a></p>
+            <p class="paragraph"><a class="link" href="https://github.com/tenhobi/ama" target="_blank">Ask me anything!</a></p>
         </div>
 
         <div class="section">
