Add articles to database

--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@
 <div class="container">
     <div class="nav">
         <h1 class="logotype">Honza Bittner</h1>
-        <a class="link" href="https://twitter.com/tenhobi" target="_blank">@tenhobi</a>
+        <a class="link twitter" href="https://twitter.com/tenhobi" target="_blank">@tenhobi</a>
     </div>
 
     <div class="content">
