--- a/web/index.html
+++ b/web/index.html
@@ -68,6 +68,8 @@
     </div>
 </div>
 
+<script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
+
 <!-- Google Analytics -->
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
