--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans:200,400,600&amp;subset=latin-ext" rel="stylesheet">
 
     <!-- Dart -->
-    <script defer src="packages/browser/dart.js"></script>
-    <script defer src="main.dart" type="application/dart"></script>
+    <script defer src="main.dart.js" type="application/javascript"></script>
 
     <!-- Meta tags -->
     <meta name="robots" content="index, follow">
