Modify a bit of design

--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,7 @@
 
     <div class="content">
         <div class="section">
-            <p class="paragraph">I have been studying <a class="link" href="http://fit.cvut.cz/en">the Faculty of Information Technology, CTU</a> for 2 years.</p>
+            <p class="paragraph">I have been studying <a class="link" href="http://fit.cvut.cz/en">the Faculty of Information Technology, CTU</a> and I am a member of faculty club FIT++.</p>
             <p class="paragraph">In my free time I cook, read books and I am trying to be active in sport. I also like exploring of open-source repositories on GitHub and making my own.</p>
             <p class="paragraph"><a class="link" href="https://github.com/tenhobi/ama" target="_blank">Ask me anything!</a></p>
         </div>
